# CherrypySystray

./: README.md  cherrypysytray.py  pyproject.toml
tests/: tests.py
