[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"

[project]
name = "CherrypySysTray"
version = "0.1.1"
description = "Simple plugin interface for infi.systray that allows systray to start and stop according to Cherrypy's signals."
authors = [
    {name="SawyerSteven", email="sawyerstevenk@gmail.com"}
]
readme = {content-type='utf-8', file='README.md'}
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cherrypy',
    'infi.systray',
]

[tool.setuptools]
py-modules = ["cherrypysystray"]

[project.urls]
repository = "https://github.com/sawyersteven/CherrypySysTray"
